--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -1,15 +1,15 @@
 .navbar {
-  background-color: #060b26;
-  height: 100px;
+  background-color: white;
+  height: 200px;
   display: flex;
   justify-content: start;
   align-items: center;
 }
 
 .menu-bars {
+  background: black;
   margin-left: 2rem;
   font-size: 2rem;
-  background: none;
 }
 
 .nav-menu {
